# gepetto-viewer-corba

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING  NEWS  README.md  flake.nix  package.xml
.github/workflows/: nix.yml  update-flake-lock.yml
blender/: CMakeLists.txt  README.md  gepettoimport.py  install_addon.py.in  urdf_to_blender.py
cmake-modules/: FindPythonQt.cmake  gepetto-viewer-corba-plugin.cmake
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile  cmake.dox  doc.hh  footer.html  layout.xml  main.hh  omniidl_be_python_with_docstring.py  porting-notes.hh
examples/: CMakeLists.txt  basic-scene.cc  display-urdf.cc  free-functions.cc
examples/notebooks/: a-basics.ipynb  b-display-force-or-velocities.ipynb
examples/pyplugin/: matplotlib_example_deprecated.py  pythonwidget.py  qcustomplot_example.py  qcustomplot_example_1.py  qcustomplot_example_2.py
idl/: sceneViewer.idl~
idl/Graphics/corbaserver/: graphicalinterface.idl  graphicalinterface.idl~
idl/gepetto/viewer/: graphical-interface.idl
include/Graphics/corbaserver/: client-cpp.hh~
include/gepetto/gui/: action-search-bar.hh  bodytreewidget.hh  color-map.hh  config-dep.hh.in  doc.hh  fwd.hh  ledindicator.hh  mainwindow.hh  meta.hh  node-action.hh  osgwidget.hh  pick-handler.hh  plugin-interface.hh  pythonwidget.hh  qt-osg-keyboard.hh  safeapplication.hh  selection-event.hh  selection-handler.hh  settings.hh  shortcut-factory.hh  tree-item.hh  windows-manager.hh
include/gepetto/gui/dialog/: dialogloadenvironment.hh  dialogloadrobot.hh  pluginmanagerdialog.hh
include/gepetto/gui/omniorb/: omniorbthread.hh  url.hh
include/gepetto/gui/ui/: dialog_loadRobotFromFile.ui  dialogloadenvironment.ui  dialogloadrobot.ui  mainwindow.ui  pluginmanagerdialog.ui
include/gepetto/viewer/corba/: api.hh  client.hh  conversions.hh  doc.hh  fwd.hh  se3.hh  server.hh  windows-manager.h  windows-manager.hh
plugins/: CMakeLists.txt
plugins/omniorbserver/: CMakeLists.txt  omniorbthread.cc  omniorbthread.hh  plugin.cc  plugin.hh
plugins/pluginskeleton/: CMakeLists.txt  plugin.cc  plugin.hh
plugins/pyqcustomplot/: CMakeLists.txt  decorator.cc  decorator.hh  plugin.cc  plugin.hh  qcpitemrichtext.hh
plugins/pyqgv/: CMakeLists.txt  decorator.cc  decorator.hh  plugin.cc  plugin.hh
pyplugins/: CMakeLists.txt
pyplugins/gepetto/gui/: __init__.py  blenderexport.py  matplotlib_example.py  matplotlibwidget.py  plugin.py  pythonwidget.py  qcp_example.py
src/: CMakeLists.txt  CMakeLists.txt~  GraphicalInterface.cpp~  GraphicalInterface.hh~  GraphicalInterface.impl.cpp  GraphicalInterface.impl.cpp~  GraphicalInterface.impl.hh  GraphicalInterface.impl.hh~  SceneViewer-corbaserver.cc  client-cpp.cc  client-cpp.cc~  client-cpp.hh  client-cpp.hh~  client.cc  conversions.hh  corbaserver.cc  erreur.txt~  fwd.hh~  graphical-interface.impl.cpp  graphical-interface.impl.hh  hpp-corbaserver.cc~  node-callback.cpp  node-callback.hh  sceneViewer.idl~  se3.hpp  server-private.cc  server-private.cc~  server-private.hh  server-private.hh~  server.cc  server.cc~  server.hh  server.hh~  test-client-cpp.cc  windows-manager.cpp
src/Graphics/: __init__.py
src/Graphics/corbaserver/: __init__.py  __init__.py~  client.py  client.py~  parser.py~  robot.py~
src/gepetto/: __init__.py  color.py  quaternion.py
src/gepetto/corbaserver/: __init__.py  client.py  exporttoblender.py  tools.py
src/gui/: CMakeLists.txt  action-search-bar.cc  bodytreewidget.cc  gepetto-gui.in  ledindicator.cc  main.cc.in  mainwindow.cc  node-action.cc  omniorbthread.cc  osgwidget.cc  pick-handler.cc  python-decorator.hh  pythonwidget.cc  safeapplication.cc  safeapplication.hh  selection-event.cc  selection-handler.cc  settings.cc  shortcut-factory.cc  tree-item.cc  windows-manager.cc
src/gui/dialog/: dialogloadenvironment.cc  dialogloadrobot.cc  pluginmanagerdialog.cc
test/: test-client-cpp.cc  test-client-cpp.cc~
tests/: CMakeLists.txt  colormap.cc  osgviewerQt.cc  trivial.py
