<?xml version='1.0'?>
 <package format='2'>
 <name>gepetto-viewer-corba</name>
 <version>5.5.0</version>
 <description>Corba server for gepetto-viewer </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/Gepetto/gepetto-viewer-corba </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>
 <depend>gepetto-viewer</depend>
 <depend>omniORB4</depend>
 </package>
